--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,8 @@
     ".next\\dev/types/**/*.ts",
     "**/*.mts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ]
 }
